# access-server

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.ini  main.c
access/pap/: CMakeLists.txt  pap.c  pap.h  pap_logger.h  pap_plugin.h
access/pap/policy_loader/: policy_loader.c  policy_loader.h  policy_loader_logger.c  policy_loader_logger.h
access/pap/store/: store.h  test_internal.h
access/pap/user/: user.c  user.h
access/pap/validator/: Makefile  optimizator.c  optimizator.h  optimizer.c  optimizer.h  parser.c  parser.h  symbols.h  validate.c  validator.c  validator.h
android/app/: CMakeLists.txt  build.gradle
cmd_listener/: CMakeLists.txt  cmd_listener.c  cmd_listener.h  cmd_listener_logger.c  cmd_listener_logger.h
cmd_listener/auth/: auth_cmd_listener.c  auth_cmd_listener.h
cmd_listener/decision/: cmd_decision.c  cmd_decision.h
embedded/: .gitignore  CMakeLists.txt  Makefile  Makefile.openwrt  Makefile.rpi  README  can_simulator.c  deploy_binaries.sh  docker-compose.yml  globals_declarations.h  main.c  test-client.c  test-server.c  user_mgmt_test.c
embedded/CpuGeneric/compression/: compress.c  compress.h
embedded/CpuGeneric/crypto/: CMakeLists.txt  aes.c  sha256.c  sha512.h
embedded/CpuGeneric/jsmn/: CMakeLists.txt  json_parser.c  json_parser.h
embedded/CpuGeneric/libfastjson/: .gitignore  CMakeLists.txt  config.h
embedded/CpuGeneric/zlib-1.2.11/: parson.c  parson.h  utility.c  utility.h
embedded/bc/: CMakeLists.txt  bc_daemon.c  bc_daemon.h
embedded/bc_webui/: ipfs.py  webui.py
embedded/cfg_mgr/: CMakeLists.txt  cfg_mgr.c  cfg_mgr.h  cfg_mgr_cmn.h
embedded/config_manager/: CMakeLists.txt  config_manager.c  config_manager.h  config_manager_cmn.h
embedded/config_manager/klib/: LICENSE
embedded/configs/: config.ini.default
embedded/data_acquisition_modules/can/: can_linux.c  can_linux.h  can_msgs.c  can_msgs.h  can_msgs_alt.h  can_receiver.c  can_receiver.h  can_thread.c  can_thread.h  lib.c
embedded/data_acquisition_modules/canopen/: canopen_receiver.c  canopen_receiver.h  canopen_sdo.c  canopen_sdo.h
embedded/data_acquisition_modules/gps/: gps_receiver.c  gps_receiver.h
embedded/data_acquisition_modules/modbus/: modbus.c  modbus.h  modbus_receiver.c  modbus_receiver.h
embedded/data_acquisition_modules/obdii/: obdii_receiver.c  obdii_receiver.h
embedded/docker/delegation_server/: Dockerfile
embedded/docker/ipfs_bc_if/: Dockerfile
embedded/include/: CMakeLists.txt  Dlog.c  Dlog.h  authDacHelper.c  authDacHelper.h  json_interface.c  json_interface.h  tcp_client.c  tcp_client.h  time_manager.c  time_manager.h  timer.c  timer.h  utils.h  utils_string.c  utils_string.h
embedded/include/policyStore/: policystore.c  policystore.h  test_internal.h
embedded/modules/AWS_daemon/: CMakeLists.txt  psDaemon.c  psDaemon.h
embedded/modules/libdac/: libauthdac.c
embedded/modules/pdp/: pdp.c  pdp.h
embedded/modules/pep/: pep.c  pep.h  pep_internal.h
embedded/modules/pip/: pip.c  pip.h  pip_internal.h
embedded/modules/resolver/: relay_interface.c  relay_interface.h  resolver.c  resolver.h
embedded/modules/tcp_server/: tcp_server.c  tcp_server.h
embedded/openwrt_stuff/: Makefile  README
embedded/tests/: relay_interface_test  relay_interface_test.c
embedded/tests/asn_test/: CMakeLists.txt  asn_test.c
embedded/tests/dac_test/: dac_test.c
embedded/user_management/: user_management.c  user_management.h
embedded/vehicle_dataset/: vehicle_dataset.c  vehicle_dataset.h  vehicle_datasharing_dataset.h  vehicle_datashering_dataset.h
network/: CMakeLists.txt  network.c  network.h  network_logger.c  network_logger.h
network/asn/: CMakeLists.txt  README.md  asn_auth.c  asn_auth.h  asn_auth_helper.c  asn_auth_helper.h  asn_logger.c
network/policy_updater/: CMakeLists.txt  policy_updater.c  policy_updater.h  psDaemon.h
plugins/data/acquisition/: CMakeLists.txt  protocol.c  protocol.h
plugins/pap/: CMakeLists.txt  pap_plugin.c  pap_plugin.h  pap_plugin_unix.c  storage.c  storage.h  test_internal.c  test_internal.h
plugins/pap/posix/: CMakeLists.txt  pap_plugin_posix.c  pap_plugin_posix.h
plugins/pap/unix/: CMakeLists.txt  pap_plugin_unix.c
plugins/pep/: CMakeLists.txt  demo_resolver_can01.c  demo_resolver_can01.h  demo_resolver_can02.c  demo_resolver_can02.h  demo_resolver_wallet.c  demo_resolver_wallet.h  pep_plugin.c  pep_plugin.h  pepplugin_can_demo.c  pepplugin_can_demo.h  pepplugin_canopen_demo.c  pepplugin_canopen_demo.h  pepplugin_relay_demo.c  pepplugin_relay_demo.h  pepplugin_wallet_demo.c  pepplugin_wallet_demo.h
plugins/pep/can/: CMakeLists.txt  pep_plugin_can.c  pep_plugin_can.h
plugins/pep/canopen/: CMakeLists.txt  pep_plugin_canopen.c  pep_plugin_canopen.h
plugins/pep/hsm/: CMakeLists.txt
plugins/pep/implementation/: pep_plugin_can01.c  pep_plugin_can_01.c  pep_plugin_can_01.h  pep_plugin_can_02.c  pep_plugin_can_02.h  pep_plugin_relay.c  pep_plugin_relay.h  pep_plugin_wallet.c  pep_plugin_wallet.h
plugins/pep/print/: CMakeLists.txt  pep_plugin_print.c  pep_plugin_print.h
plugins/pip/: CMakeLists.txt  pip_plugin.c  pip_plugin.h
plugins/pip/can/: can_linux.c  (+12 more)
plugins/resolver/: CMakeLists.txt  relay_interface.c  relay_interface.h  resolver.c  resolver.h
reference_implementation/: CMakeLists.txt  config.ini  main.c
reference_implementation/config_manager/: CMakeLists.txt  config_manager.c
reference_implementation/network/: network_logger.h
reference_implementation/policy_loader/: CMakeLists.txt
request_listener/: CMakeLists.txt  request_listener.c  request_listener.h  request_listener_logger.c  request_listener_logger.h
request_listener/auth/: auth_request_listener.c  auth_request_listener.h
request_listener/decision/: request_listener_calculate_decision.c  request_listener_calculate_decision.h
utils/crypto/: CMakeLists.txt  aes.c  aes.h  crypto_logger.c  crypto_logger.h  curve25519-donna.c  sha256.c  sha256.h  sha512.c  sha512.h
wallet/: CMakeLists.txt  wallet.c  wallet.h  wallet_errors.h  wallet_logger.c  wallet_logger.h
wallet/tests/: test_wallet.c
(+861 files in other folders)
